# hyperion-os

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUILDING.md  INTEGRATION.md  PORTING.md  UI_API.md
efi-stub/: Cargo.toml
efi-stub/src/: main.rs
kernel/: Cargo.toml  build.rs  linker-x86_64.ld  linker.ld
kernel/src/: lib.rs  log.rs  main.rs  panic.rs  sync.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.rs  context.rs  exceptions.rs  gic.rs  mmu.rs  mod.rs  psci.rs  smp.rs  timer.rs  uart.rs
kernel/src/arch/aarch64/gic/: mod.rs  v2.rs  v3.rs
kernel/src/arch/x86_64/: acpi.rs  apic.rs  boot.rs  context.rs  exceptions.rs  gdt.rs  ioapic.rs  isr_stubs.s  mod.rs  paging.rs  pic.rs  pit.rs  serial.rs  timer.rs  tsc.rs
kernel/src/display/: compositor.rs  framebuffer.rs  mod.rs  monitor.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs
kernel/src/drivers/net/: mod.rs
kernel/src/drivers/uart/: bcm_mini.rs  mod.rs  ns16550.rs  pl011.rs
kernel/src/drivers/virtio/: blk.rs  gpu.rs  mmio.rs  mod.rs  net.rs  queue.rs
kernel/src/fs/: inode.rs  mod.rs  ramfs.rs  vfs.rs
kernel/src/hal/: boot_info.rs  console.rs  dtb.rs  mod.rs  multiboot.rs
kernel/src/ipc/: caps.rs  mod.rs  port.rs
kernel/src/mm/: address.rs  heap.rs  mod.rs  pmm.rs  vmm.rs
kernel/src/proc/: context.rs  mod.rs  percpu.rs  process.rs  scheduler.rs  thread.rs  user.rs
kernel/src/shell/: commands.rs  mod.rs
kernel/src/syscall/: mod.rs
kernel/src/ui/: canvas.rs  font.rs  mod.rs  widgets.rs
libos-api/: Cargo.toml
libos-api/src/: display.rs  fs.rs  lib.rs  syscall.rs  ui.rs
scripts/: build-iso-x86_64.sh  build-iso.sh  build-usb-img-x86_64.sh  build-usb-img.sh  run-qemu.sh
