[package]
name = "hyperion-os-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stable public API surface for building OSes & UI toolkits on top of Hyperion."

[features]
# `std` adds extra impls (Display, Error) for host-side users; the kernel
# defaults to `default-features = false`.
default = ["std"]
std = []

[dependencies]
bitflags = { version = "2.6", default-features = false }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
new_without_default = "allow"
